# hy-kube

./: .gitignore  Makefile  README.md  docker_build_and_publish.sh  prometheus_local.yml
.github/workflows/: cicd.yml  teardown.yml
gcp_resources/: .terraform.lock.hcl  main.tf  variables.tf
load_testing/: locustfile.py
mainapp/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile.reader  Dockerfile.writer  docker_build_and_publish.sh
mainapp/manifests/: configmap.yaml  deployment.yaml  ingress.yaml  service.yaml
mainapp/manifests/standalone/: deployment.yaml  ingress.yaml  service.yaml
mainapp/manifests/with_pingpong/: deployment.yaml  ingress.yaml  persistentvolumeclaim.yaml  service.yaml
mainapp/reader/: Cargo.toml
mainapp/reader/src/: lib.rs  main.rs
mainapp/src/: main.rs
mainapp/writer/: Cargo.toml
mainapp/writer/src/: lib.rs  main.rs
manifests_global/: hy-kube-project-namespace.yaml  mainapp-namespace.yaml  persistentvolume.yaml
part01/1_01/: commands.md
part01/1_02/: commands.md
part01/1_03/: commands.md
part01/1_04/: commands.md
part01/1_05/: commands.md
part01/1_06/: commands.md
part01/1_07/: commands.md
part01/1_08/: commands.md
part01/1_09/: commands.md
part01/1_10/: commands.md
part01/1_11/: commands.md
part01/1_12/: commands.md
part01/1_13/: commands.md
part02/2_01/: commands.md
part02/2_02/: commands.md
part02/2_03/: commands.md
part02/2_04/: commands.md
part02/2_06/: commands.md
part02/2_07/: commands.md
part02/2_08/: commands.md
part02/2_09/: commands.md
part02/2_10/: commands.md
part03/3_01/: commands.md
part03/3_02/: commands.md
part03/3_03/: commands.md
part03/3_04/: commands.md
part03/3_05/: commands.md
part03/3_06/: comments.md
part03/3_07/: commands.md
part03/3_08/: commands.md
part03/3_09/: commands.md
part03/3_10/: commands.md
part04/4_01/: commands.md
part04/4_02/: commands.md
pingpong/: .gitignore  Cargo.toml  Dockerfile  Rocket.toml  docker_build_and_publish.sh
pingpong/manifests/: deployment-config.yaml  deployment.yaml  ingress.yaml  postgres-config.yaml  postgres-persistentvolume.yaml  postgres-pwd-sealedsecret.yaml  postgres-service.yaml  postgres-stateful.yaml  service.yaml
pingpong/manifests/secrets/: .sops.yaml  postgres-pwd.enc.yaml
pingpong/migrations/: 20220529180201_ping_status_table.down.sql
pingpong/migrations/2021-04-18-091549_PingStatus/: down.sql  up.sql
pingpong/src/: config.rs  db.rs  db_init.rs  db_live.rs  lib.rs  main.rs  models.rs  schema.rs  server.rs
project/: kustomization.yaml
project/backend/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile.imagesync  Dockerfile.randomtask  Dockerfile.server  docker_build_and_publish.sh  kustomization.yaml  postgres-pwd-generator.yaml
project/backend/imagesync/: Cargo.toml  Rocket.toml
project/backend/imagesync/src/: config.rs  image.rs  lib.rs  main.rs  server.rs
project/backend/manifests/: backend-autoscaler.yaml  daily-todo-job.yaml  deployment-config.yaml  deployment-imagesync.yaml  deployment.yaml  ingress.yaml  monitor-deployment.yaml  persistentvolumeclaim.yaml  postgres-config.yaml  postgres-service.yaml  postgres-stateful.yaml  service-imagesync.yaml  service.yaml
project/backend/manifests/secrets/: .sops.yaml  key.txt  postgres-pwd-generator.yaml  postgres-pwd.enc.yaml  postgres-pwd.yaml
project/backend/randomtask/: Cargo.toml
project/backend/randomtask/src/: api.rs  config.rs  lib.rs  main.rs  todo.rs  url_fetcher.rs
project/backend/server/: Cargo.toml  Rocket.toml
project/backend/server/migrations/: 20220528184012_todo-table.up.sql
project/backend/server/src/: config.rs  db.rs  image.rs  lib.rs  main.rs  model.rs  server.rs
project/backend/src/: db.rs  lib.rs  main.rs  model.rs  server.rs
project/backend/static/: index.html
project/backend/templates/: index.html.tera
project/frontend/: .dockerignore  .gitignore  Dockerfile.dev  Dockerfile.kube  docker_build_and_publish.sh  kustomization.yaml  package-lock.json  package.json
project/frontend/manifests/: autoscaler.yaml  deployment.yaml  ingress.yaml  service.yaml
project/frontend/public/: index.html
project/frontend/src/: App.css  App.test.tsx  App.tsx
project/frontend/src/utils/: config.ts
