[package]
name = "pingpong"
version = "0.1.0"
authors = ["Tomi Kasurinen <tomi.kasurinen@solita.fi>"]
edition = "2018"

[dependencies]
rocket = { version = "0.5.0-dev", git = "https://github.com/SergioBenitez/Rocket", rev = "dd0c036" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15.0"
indexmap = "1.6.2"
diesel = { version = "1.4.4", features = ["postgres"] }

[dependencies.rocket_contrib]
version = "0.5.0-dev"
git = "https://github.com/SergioBenitez/Rocket"
rev = "dd0c036"
default-features = false
features = ["json", "diesel_postgres_pool"]
