[package]
name = "pingpong"
version = "0.1.0"
authors = ["Tomi Kasurinen <tomi.kasurinen@solita.fi>"]
edition = "2018"

[dependencies]
rocket = { version = "0.5.0-rc.2", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
#sqlx = "0.5"
serde_json = "1.0"
dotenv = "0.15.0"
indexmap = "1.6.2"
diesel = { version = "1.4.8", features = ["postgres"] }
diesel_migrations = "1.4.0"

[dependencies.sqlx]
version = "0.5"
default-features = false
features = ["macros"]

[dependencies.rocket_db_pools]
version = "0.1.0-rc.2"
features = ["sqlx_postgres"]