[package]
name = "reader"
version = "0.1.0"
authors = ["Tomi Kasurinen <tomi.kasurinen@solita.fi>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { version="0.8", features = ["v4"] }
rocket = "0.4.5"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15.0"
