[package]
name = "backend"
version = "0.1.0"
authors = ["Tomi Kasurinen <tomi.kasurinen@solita.fi>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "0.5.6"
chrono =  { version = "0.4", features = ["serde"] }
rocket = "0.4.6"
rocket_cors = "0.5.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.10", features = ["blocking", "json"] }

[dependencies.rocket_contrib]
version = "0.4.5"
