[package]
name = "imagesync"
version = "0.1.0"
authors = ["Tomi Kasurinen <tomi.kasurinen@gmail.com>"]
edition = "2021"

[dependencies]
bytes = "1.1.0"
chrono =  { version = "0.4", features = ["serde"] }
reqwest = { version = "0.11.10", features = ["blocking", "json"] }
rocket = { version = "0.5.0-rc.2", features = ["json"] }
rocket_cors = "0.6.0-alpha1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"